tests/NormalTests/paczka1/small_fuzzy/21639050.err
Error in line 2: 8FJG28UpI9 S433 13,3
Error in line 5: R7pp A102 48,9
Error in line 9: 8FJG28UpI9 S5 21,2
